<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CustomCamActivity">

    <TextureView
        android:id="@+id/textureView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/btnCapture"
        android:layout_below="@id/textView"
        android:layout_centerInParent="true" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/please_align"
        android:textAlignment="center" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_above="@id/btnCapture"
        android:layout_below="@id/textView"
        app:srcCompat="@drawable/guideline"
        android:contentDescription="@string/guideline" />

    <Button
        android:id="@+id/btnCapture"
        android:layout_alignParentBottom="true"
        android:text="@string/capture"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</RelativeLayout>